Update error message for copy failure alert

--- a/index.html
+++ b/index.html
@@ -534,8 +534,7 @@
                     btn.className = originalClass;
                     btn.style.color = "";
                 }, 2000);
-            }).catch(err => customAlert("Failed to copy! <p>Visit bol-ai.vercel.app to use this tool.
-You can copy this text or download it as a file.</p>"));
+            }).catch(err => customAlert("Failed to copy! visit bol-ai.vercel.app to copy or download this text."));
         }
 
         window.downloadCode = function(btn) {
