Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         
         <div style="margin: 30px 0; padding: 20px; border: 2px dashed var(--accent); border-radius: 15px; text-align: center; background: rgba(0,255,255,0.05);">
             <i class="fas fa-envelope" style="font-size: 2rem; color: var(--accent); margin-bottom: 10px; display: block;"></i>
-            <span style="font-size: 1.5rem; font-weight: 800; color: var(--text);">vcoder7311@gmail.com</span>
+            <span style="font-size: 1.5rem; font-weight: 800; color: var(--text);">dalvivijay7310@gmail.com</span>
         </div>
         
         <p style="text-align: center; font-size: 0.9rem; color: var(--text-dim);">
