--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         - [UPGRADE] Smart Voice Selection (Natural sounding logic)
         - [UPGRADE] Text Normalization for Voice (Removes Markdown symbols)
         - [UI] Expanded Sidebar & Touch Targets
+        - vivek dalvi 💪
     -->
 
     <!-- External Assets -->
